layout, html and horizontal scrolling on 320-360px devices corrected

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,6 @@
 .footer__copyright {
   margin: 67px auto 60px 0;
   padding: 0;
-  width: 318px;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
